--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,16 @@
 <resources>
     <string name="app_name">DilPay</string>
 
-    <string name="about1">About DilBus</string>
-    <string name="about2">DilBus is India’s Best online bus ticketing platform that has transformed bus travel in the country by bringing ease and convenience to millions of Indians who travel using buses. Founded in 2019, DilBus is part of India’s leading online travel company . By providing widest choice, superior customer service, lowest prices and unmatched benefits</string>
+    <string name="about1">About DilPay</string>
+    <string name="about2">DilPay is India’s Best online bus ticketing and recharge bill payments platform that has transformed  bus ticket bill payments by bringing with new idea of benefiting users with each payments transaction ,we are happy to say DilPay is the next biggest evaluation in online business.Founded in 2019 with great idea of unmatched benefits on your every transaction.</string>
     <string name="about3">Why Choose Us</string>
-    <string name="about4">We provide better service. Give you best offers on trips. We Definitly make you feel happy and satisfy about your trip on our service</string>
+    <string name="about4">We provide better service. Give you best offers on your transactions. We Definitly make you feel happy and satisfy about your usage of our service.</string>
     <string name="about5">Our Mission</string>
-    <string name="about6">Make DilBus, Based on customer view best price and beautiful experience and based on our view best service</string>
+    <string name="about6">Aim to make DilPay, Based on customer view best price and beautiful experience and based on our view best service</string>
 
     <string name="contact1">Get In Touch</string>
     <string name="contact2">For Customer Support and Query, Get in touch with us: Help</string>
-    <string name="contact3">DilBus India Services Pvt.Ltd.</string>
+    <string name="contact3">DilPay Services India Pvt.Ltd.</string>
     <string name="contact4">H.no : 3-4-104/1,</string>
     <string name="contact5">Narsimha Nagar Colony,</string>
     <string name="contact6">Mallapur X Road,</string>
@@ -20,7 +20,7 @@
     <string name="contact10">Telephone</string>
     <string name="contact11">(+91)9059143346</string>
     <string name="contact12">Business Inquiries</string>
-    <string name="contact13">support@dilbus.com</string>
+    <string name="contact13">support@dilpay.in</string>
 
     <string name="faq1">Get answers to your queries</string>
     <string name="faq2">Online payments with Dilpay application.</string>
@@ -48,7 +48,7 @@
 
 
     <string name="pol1">Type of information we collect and its legal basis</string>
-    <string name="pol000">By downloading/using/accessing the Dilpay application indicate that you understand, agree and consent to this privacy policy.The Dilpay app is fully designed for business and/or personal use purposes, A user hereby provide your unconditional consent or agreements to the Dilpay</string>
+    <string name="pol000">4.By downloading/using/accessing the Dilpay application indicate that you understand, agree and consent to this privacy policy.The Dilpay app is fully designed for business and/or personal use purposes, A user hereby provide your unconditional consent or agreements to the Dilpay</string>
     <string name="pol2">The information as detailed below is collected for us to be able to provide the services chosen by you and also to fulfill our legal obligations as well as our obligations towards third parties as per our User Agreement.</string>
     <string name="pol3">"Personal Information" of User shall include the information shared by the User and collected by us for the following purposes:</string>
     <string name="pol4"> Information which you provide while subscribing to or registering on the Website, including but not limited to information about your personal identity such as name, gender, age etc., your contact details such as your email address, postal addresses, telephone (mobile or otherwise) and/or fax numbers. The information may also include information such as your banking details (including credit/debit card) and any other information relating to your income and/or lifestyle; billing information payment history etc. (as shared by you).</string>
@@ -56,8 +56,8 @@
     <string name="pol6">1.Transactional history (other than banking details) about your e-commerce activities, buying behavior.</string>
     <string name="pol7">2.Your user names, passwords, email addresses and other security-related information used by you in relation to our Services.</string>
     <string name="pol8">3.Data either created by you or by a third party and which you wish to store on our servers such as image files, documents etc.</string>
-    <string name="pol001">"Business Partners" – Shall refer to any individual, group of individuals defined under law with whom Dilpay have a contractual relationship not limited to Merchants, Advertisers, Deal partners, Financial institutions.</string>
-    <string name="pol002">"Service Providers" – Refers to any individual, group of individuals defined under law whose services are used by Dilpay in order to provide the intended services to You through Dilpay platforms.</string>
+    <string name="pol001">6."Business Partners" – Shall refer to any individual, group of individuals defined under law with whom Dilpay have a contractual relationship not limited to Merchants, Advertisers, Deal partners, Financial institutions.</string>
+    <string name="pol002">7."Service Providers" – Refers to any individual, group of individuals defined under law whose services are used by Dilpay in order to provide the intended services to You through Dilpay platforms.</string>
     <string name="pol10">5.Information pertaining any other user(s) for who you make a transaction for(booking, recharge, etc.,) through your registered Dilpay account. In such case, you must confirm and represent that each of the other user(s) for whom a booking or payment has been made, has agreed to have the information shared by you disclosed to us and further be shared by us with the concerned service provider(s).</string>
     <string name="pol11">How we use your personel information</string>
     <string name="pol12">The Personal Information collected maybe used in the following manner:</string>
@@ -106,7 +106,7 @@ Such disclosure and storage may take place without your knowledge. In that case,
 
 
     <string name="terms1">General Terms And Conditions.</string>
-    <string name="terms2">1.DilBus.com (DilBus Services India Pvt. Ltd.) is an aggregator for online bus ticketing inventory. Dilbus enables travellers to book bus tickets online right from the comfort of their home or office by providing them with choice of bus operators, departure times and prices. DilBus does not own or operate any bus services on its own. Dilbus does not advice any specific bus operator to its customers. The choice of the bus operator is purely the discretion of the customer.</string>
+    <string name="terms2">1.dilpay.in (DilPay Services India Pvt. Ltd.) is an aggregator for online bus ticketing inventory. Dilbus enables travellers to book bus tickets online right from the comfort of their home or office by providing them with choice of bus operators, departure times and prices. DilBus does not own or operate any bus services on its own. Dilbus does not advice any specific bus operator to its customers. The choice of the bus operator is purely the discretion of the customer.</string>
     <string name="terms3">2.The arrival and departure times mentioned on the ticket are only tentative timings. Buses may be delayed due to some unavoidable reasons like traffic jams etc. However, the bus will not leave the source before the time that is mentioned on the ticket. Passengers are advised to call the bus operator contact number mentioned in the ticket and reconfirm the boarding point location and departure time on the day of journey.</string>
     <string name="terms4">3.Passengers are required to furnish the following details at the time of boarding the bus. Failing to do so, they may not be allowed to board the bus.</string>
     <string name="terms5">3.1. SMS of the ticket or Email. (This is widely accepted by most bus operators)</string>
