--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <string name="pol000">4.By downloading/using/accessing the Dilpay application indicate that you understand, agree and consent to this privacy policy.The Dilpay app is fully designed for business and/or personal use purposes, A user hereby provide your unconditional consent or agreements to the Dilpay</string>
     <string name="pol2">The information as detailed below is collected for us to be able to provide the services chosen by you and also to fulfill our legal obligations as well as our obligations towards third parties as per our User Agreement.</string>
     <string name="pol3">"Personal Information" of User shall include the information shared by the User and collected by us for the following purposes:</string>
-    <string name="pol4"> Information which you provide while subscribing to or registering on the Website, including but not limited to information about your personal identity such as name, gender, age etc., your contact details such as your email address, postal addresses, telephone (mobile or otherwise) and/or fax numbers. The information may also include information such as your banking details (including credit/debit card) and any other information relating to your income and/or lifestyle; billing information payment history etc. (as shared by you).</string>
+    <string name="pol4"> Information which you provide while subscribing to or registering on DilPay, including but not limited to information about your personal identity such as name, gender, age etc., your contact details such as your email address, postal addresses, telephone (mobile or otherwise) and/or fax numbers. The information may also include information such as your banking details (including credit/debit card) and any other information relating to your income and/or lifestyle; billing information payment history etc. (as shared by you).</string>
     <string name="pol5"> We many also collect some other information and documents including but not limited to:</string>
     <string name="pol6">1.Transactional history (other than banking details) about your e-commerce activities, buying behavior.</string>
     <string name="pol7">2.Your user names, passwords, email addresses and other security-related information used by you in relation to our Services.</string>
@@ -284,7 +284,7 @@ Such disclosure and storage may take place without your knowledge. In that case,
     <string name="referralsRewards">Refferals	-  (1-5%) (2-10%)(3-20%)</string>
     <string name="note">Note: Reward Points will be expired by automatically on 25th of Every Month</string>
 
-<!--    <string name="app_name">Keyguard</string>-->
+    <!--    <string name="app_name">Keyguard</string>-->
     <string name="unlock">Unlock</string>
     <string name="confirm_pattern">Confirm your screen lock PIN,Pattern or Password</string>
     <string name="setting_label"><![CDATA[Please set the screen lock Manually by navigating to : Settings>Security.]]></string>
